04-deploy-k8s/prometheus/nfs-promethus.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
