04-deploy-k8s/prometheus/ingress-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
spec:
  ingressClassName: haproxy
  rules:
    - host: prometheus.danny.vn
      http:
        paths:
          - backend:
              service:
                name: prometheus-operated
                port:
                  number: 9090
            path: /
            pathType: Prefix
